--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "prisma": "^5.14.0"
+    "prisma": "^5.14.0",
+    "vercel": "^32.3.0"
   }
 }
