--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
+    "@types/nodemailer": "^6.4.16",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
     "@prisma/client": "^5.14.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "@vercel/postgres": "^0.10.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.14.0",
     "vercel": "^32.3.0"
   }
