--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.12.12",
     "@types/nodemailer": "^6.4.16",
     "ts-node-dev": "^2.0.0",
@@ -27,6 +28,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.16",
     "prisma": "^5.14.0",
     "vercel": "^32.3.0"
   }
